--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -127,6 +127,21 @@ img {
 }
 
 /* === LAYOUT === */
+section {
+	padding: 80px 0;
+}
+
+.section-header {
+	text-align: center;
+}
+
+section h2 {
+	margin: 20px 0 40px;
+}
+
+section h3 {
+	margin: 30px 0 10;
+}
 
 #optin {
 	background: #3e4249;
@@ -140,6 +155,8 @@ img {
 #optin p {
 	margin: 7px 0 0 0;
 }
+
+
 
 
 
