--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -217,9 +217,11 @@ section h3 {
 }
 
 #instructor .num {
+	display: table;
 	font-size: 30px;
 	font-weight: bold;
 	color: white;
+	line-height: 24px;
 	width: 140px;
 	height: 140px;
 	text-align: center;
@@ -229,6 +231,17 @@ section h3 {
 	-moz-border-radius: 100%;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizelegibility;
+}
+
+#instructor .num .num-content {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+#instructor .num span {
+	display: block;
+	font-size: 20px;
+	font-weight: normal;
 }
 
 /* === CUSTOM ICON SPRITES === */
