--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -215,6 +215,10 @@ section {
 	padding: 80px 0;
 }
 
+section.main-content {
+	padding: 40px 0;
+}
+
 .section-header {
 	text-align: center;
 }
@@ -531,6 +535,17 @@ footer li.signup-link a:hover {
 	border-top: solid 1px #eee;
 }
 
+/* === RESOURCES === */
+
+.resource {
+	width: 31.33333333%;
+	float: left;
+	margin: 0 3% 40px 0;
+}
+
+.resource:nth-child(3n) {
+	margin-right: 0; 
+}
 
 /* === CUSTOM ICON SPRITES === */
 
@@ -595,6 +610,12 @@ textarea {
 	#featurette iframe {
 		height: 240px;
 	}
+
+	.resource {
+		width: 48%;
+		margin-right: 2%;
+		min-height: 800px;
+	}
 }
 
 @media screen and (max-width: 568px) {
@@ -606,5 +627,11 @@ textarea {
 
 	#instructor .num span {
 		font-size: 16px;
+	}
+
+	.resource {
+		width: 100%;
+		margin-right: 0;
+		min-height: 0;
 	}
 }
